<resources>
    <string name="app_name">ProfileXML</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asking_for">Asking For</string>
    <string name="offerings">Offerings</string>
    <string name="recommendations">Recommendations</string>
    <string name="other_settings">Other Settings</string>
    <string name="invite_more_friends">Invite More Friends</string>
</resources>