<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/profile_background"
        android:layout_marginTop="22dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/profile_background"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_marginTop="25dp"
        android:layout_marginStart="18dp"
        />

    <Button
        android:id="@+id/invite_friends_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_picture"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:text="@string/invite_more_friends"
        android:background="@drawable/button_design"
        app:backgroundTint="@color/lightBlack"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/otherSettings"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_picture"
        android:layout_below="@id/invite_friends_btn"
        android:layout_marginTop="42dp"
        android:layout_marginStart="15dp"
        android:textAllCaps="false"
        android:layout_marginEnd="15dp"
        android:text="@string/other_settings"
        android:textColor="@color/white"
        android:background="@drawable/button_design"
        app:backgroundTint="@color/lightBlack"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        app:tabIndicatorColor="@color/orange"
        android:background="@color/white"
        app:tabTextColor="@color/grey"
        android:layout_marginTop="24dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/MyTabLayout"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"
        android:background="@color/white"
        />

    <LinearLayout
        android:id="@+id/llFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/llChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginEnd="5dp"
            android:visibility="gone"
            >

            <LinearLayout
                android:id="@+id/llAskingFor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAskingFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asking_for"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/orange"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAskingFor"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:backgroundTint="@color/lightBlack"
                    android:src="@drawable/asking_for"
                    app:tint="@color/white"
                    app:fabCustomSize="45dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llOfferings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/tvOfferings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offerings"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/orange"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabOfferings"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:backgroundTint="@color/lightBlack"
                    android:src="@drawable/offerings"
                    app:tint="@color/white"
                    app:fabCustomSize="45dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRecommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvRecommendations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendations"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/orange"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabRecommendations"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:backgroundTint="@color/lightBlack"
                    android:src="@drawable/recom"
                    app:tint="@color/white"
                    app:fabCustomSize="45dp"
                    />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/lightBlack"
            app:tint="@color/orange"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</RelativeLayout>